build/usd-sys/usd-c/include.in/pxr/base/gf/gf_vec.h

#pragma once
#include "usd-api-export.h"


#ifdef __cplusplus
extern "C" {
#endif

/** \class GfVec2f
\ingroup group_gf_LinearAlgebra

Basic type for a vector of 2 float components.

Represents a vector of 2 components of type \c float.
It is intended to be fast and simple. */
typedef struct pxrInternal_v0_21__pxrReserved____GfVec2f_t_s {
    char data[%SIZEpxrInternal_v0_21__pxrReserved__::GfVec2f%];
} USD_CPPMM_ALIGN(%ALIGNpxrInternal_v0_21__pxrReserved__::GfVec2f%) pxrInternal_v0_21__pxrReserved____GfVec2f_t;
typedef pxrInternal_v0_21__pxrReserved____GfVec2f_t pxr_GfVec2f_t;

/** \class GfVec2h
\ingroup group_gf_LinearAlgebra

Basic type for a vector of 2 GfHalf components.

Represents a vector of 2 components of type \c GfHalf.
It is intended to be fast and simple. */
typedef struct pxrInternal_v0_21__pxrReserved____GfVec2h_t_s {
    char data[%SIZEpxrInternal_v0_21__pxrReserved__::GfVec2h%];
} USD_CPPMM_ALIGN(%ALIGNpxrInternal_v0_21__pxrReserved__::GfVec2h%) pxrInternal_v0_21__pxrReserved____GfVec2h_t;
typedef pxrInternal_v0_21__pxrReserved____GfVec2h_t pxr_GfVec2h_t;

/** \class GfVec2d
\ingroup group_gf_LinearAlgebra

Basic type for a vector of 2 double components.

Represents a vector of 2 components of type \c double.
It is intended to be fast and simple. */
typedef struct pxrInternal_v0_21__pxrReserved____GfVec2d_t_s {
    char data[%SIZEpxrInternal_v0_21__pxrReserved__::GfVec2d%];
} USD_CPPMM_ALIGN(%ALIGNpxrInternal_v0_21__pxrReserved__::GfVec2d%) pxrInternal_v0_21__pxrReserved____GfVec2d_t;
typedef pxrInternal_v0_21__pxrReserved____GfVec2d_t pxr_GfVec2d_t;

/** \class GfVec2i
\ingroup group_gf_LinearAlgebra

Basic type for a vector of 2 int components.

Represents a vector of 2 components of type \c int.
It is intended to be fast and simple. */
typedef struct pxrInternal_v0_21__pxrReserved____GfVec2i_t_s {
    char data[%SIZEpxrInternal_v0_21__pxrReserved__::GfVec2i%];
} USD_CPPMM_ALIGN(%ALIGNpxrInternal_v0_21__pxrReserved__::GfVec2i%) pxrInternal_v0_21__pxrReserved____GfVec2i_t;
typedef pxrInternal_v0_21__pxrReserved____GfVec2i_t pxr_GfVec2i_t;

/** \class GfVec3f
\ingroup group_gf_LinearAlgebra

Basic type for a vector of 3 float components.

Represents a vector of 3 components of type \c float.
It is intended to be fast and simple. */
typedef struct pxrInternal_v0_21__pxrReserved____GfVec3f_t_s {
    char data[%SIZEpxrInternal_v0_21__pxrReserved__::GfVec3f%];
} USD_CPPMM_ALIGN(%ALIGNpxrInternal_v0_21__pxrReserved__::GfVec3f%) pxrInternal_v0_21__pxrReserved____GfVec3f_t;
typedef pxrInternal_v0_21__pxrReserved____GfVec3f_t pxr_GfVec3f_t;

/** \class GfVec3h
\ingroup group_gf_LinearAlgebra

Basic type for a vector of 3 GfHalf components.

Represents a vector of 3 components of type \c GfHalf.
It is intended to be fast and simple. */
typedef struct pxrInternal_v0_21__pxrReserved____GfVec3h_t_s {
    char data[%SIZEpxrInternal_v0_21__pxrReserved__::GfVec3h%];
} USD_CPPMM_ALIGN(%ALIGNpxrInternal_v0_21__pxrReserved__::GfVec3h%) pxrInternal_v0_21__pxrReserved____GfVec3h_t;
typedef pxrInternal_v0_21__pxrReserved____GfVec3h_t pxr_GfVec3h_t;

/** \class GfVec3d
\ingroup group_gf_LinearAlgebra

Basic type for a vector of 3 double components.

Represents a vector of 3 components of type \c double.
It is intended to be fast and simple. */
typedef struct pxrInternal_v0_21__pxrReserved____GfVec3d_t_s {
    char data[%SIZEpxrInternal_v0_21__pxrReserved__::GfVec3d%];
} USD_CPPMM_ALIGN(%ALIGNpxrInternal_v0_21__pxrReserved__::GfVec3d%) pxrInternal_v0_21__pxrReserved____GfVec3d_t;
typedef pxrInternal_v0_21__pxrReserved____GfVec3d_t pxr_GfVec3d_t;

/** \class GfVec3i
\ingroup group_gf_LinearAlgebra

Basic type for a vector of 3 int components.

Represents a vector of 3 components of type \c int.
It is intended to be fast and simple. */
typedef struct pxrInternal_v0_21__pxrReserved____GfVec3i_t_s {
    char data[%SIZEpxrInternal_v0_21__pxrReserved__::GfVec3i%];
} USD_CPPMM_ALIGN(%ALIGNpxrInternal_v0_21__pxrReserved__::GfVec3i%) pxrInternal_v0_21__pxrReserved____GfVec3i_t;
typedef pxrInternal_v0_21__pxrReserved____GfVec3i_t pxr_GfVec3i_t;

/** \class GfVec4f
\ingroup group_gf_LinearAlgebra

Basic type for a vector of 4 float components.

Represents a vector of 4 components of type \c float.
It is intended to be fast and simple. */
typedef struct pxrInternal_v0_21__pxrReserved____GfVec4f_t_s {
    char data[%SIZEpxrInternal_v0_21__pxrReserved__::GfVec4f%];
} USD_CPPMM_ALIGN(%ALIGNpxrInternal_v0_21__pxrReserved__::GfVec4f%) pxrInternal_v0_21__pxrReserved____GfVec4f_t;
typedef pxrInternal_v0_21__pxrReserved____GfVec4f_t pxr_GfVec4f_t;

/** \class GfVec4h
\ingroup group_gf_LinearAlgebra

Basic type for a vector of 4 GfHalf components.

Represents a vector of 4 components of type \c GfHalf.
It is intended to be fast and simple. */
typedef struct pxrInternal_v0_21__pxrReserved____GfVec4h_t_s {
    char data[%SIZEpxrInternal_v0_21__pxrReserved__::GfVec4h%];
} USD_CPPMM_ALIGN(%ALIGNpxrInternal_v0_21__pxrReserved__::GfVec4h%) pxrInternal_v0_21__pxrReserved____GfVec4h_t;
typedef pxrInternal_v0_21__pxrReserved____GfVec4h_t pxr_GfVec4h_t;

/** \class GfVec4d
\ingroup group_gf_LinearAlgebra

Basic type for a vector of 4 double components.

Represents a vector of 4 components of type \c double.
It is intended to be fast and simple. */
typedef struct pxrInternal_v0_21__pxrReserved____GfVec4d_t_s {
    char data[%SIZEpxrInternal_v0_21__pxrReserved__::GfVec4d%];
} USD_CPPMM_ALIGN(%ALIGNpxrInternal_v0_21__pxrReserved__::GfVec4d%) pxrInternal_v0_21__pxrReserved____GfVec4d_t;
typedef pxrInternal_v0_21__pxrReserved____GfVec4d_t pxr_GfVec4d_t;

/** \class GfVec4i
\ingroup group_gf_LinearAlgebra

Basic type for a vector of 4 int components.

Represents a vector of 4 components of type \c int.
It is intended to be fast and simple. */
typedef struct pxrInternal_v0_21__pxrReserved____GfVec4i_t_s {
    char data[%SIZEpxrInternal_v0_21__pxrReserved__::GfVec4i%];
} USD_CPPMM_ALIGN(%ALIGNpxrInternal_v0_21__pxrReserved__::GfVec4i%) pxrInternal_v0_21__pxrReserved____GfVec4i_t;
typedef pxrInternal_v0_21__pxrReserved____GfVec4i_t pxr_GfVec4i_t;


/** returns the size of this type in bytes */
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____GfVec2f_sizeof();
#define pxr_GfVec2f_sizeof pxrInternal_v0_21__pxrReserved____GfVec2f_sizeof


/** returns the size of this type in bytes */
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____GfVec2f_alignof();
#define pxr_GfVec2f_alignof pxrInternal_v0_21__pxrReserved____GfVec2f_alignof


/** returns the size of this type in bytes */
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____GfVec2h_sizeof();
#define pxr_GfVec2h_sizeof pxrInternal_v0_21__pxrReserved____GfVec2h_sizeof


/** returns the size of this type in bytes */
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____GfVec2h_alignof();
#define pxr_GfVec2h_alignof pxrInternal_v0_21__pxrReserved____GfVec2h_alignof


/** returns the size of this type in bytes */
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____GfVec2d_sizeof();
#define pxr_GfVec2d_sizeof pxrInternal_v0_21__pxrReserved____GfVec2d_sizeof


/** returns the size of this type in bytes */
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____GfVec2d_alignof();
#define pxr_GfVec2d_alignof pxrInternal_v0_21__pxrReserved____GfVec2d_alignof


/** returns the size of this type in bytes */
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____GfVec2i_sizeof();
#define pxr_GfVec2i_sizeof pxrInternal_v0_21__pxrReserved____GfVec2i_sizeof


/** returns the size of this type in bytes */
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____GfVec2i_alignof();
#define pxr_GfVec2i_alignof pxrInternal_v0_21__pxrReserved____GfVec2i_alignof


/** returns the size of this type in bytes */
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____GfVec3f_sizeof();
#define pxr_GfVec3f_sizeof pxrInternal_v0_21__pxrReserved____GfVec3f_sizeof


/** returns the size of this type in bytes */
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____GfVec3f_alignof();
#define pxr_GfVec3f_alignof pxrInternal_v0_21__pxrReserved____GfVec3f_alignof


/** returns the size of this type in bytes */
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____GfVec3h_sizeof();
#define pxr_GfVec3h_sizeof pxrInternal_v0_21__pxrReserved____GfVec3h_sizeof


/** returns the size of this type in bytes */
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____GfVec3h_alignof();
#define pxr_GfVec3h_alignof pxrInternal_v0_21__pxrReserved____GfVec3h_alignof


/** returns the size of this type in bytes */
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____GfVec3d_sizeof();
#define pxr_GfVec3d_sizeof pxrInternal_v0_21__pxrReserved____GfVec3d_sizeof


/** returns the size of this type in bytes */
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____GfVec3d_alignof();
#define pxr_GfVec3d_alignof pxrInternal_v0_21__pxrReserved____GfVec3d_alignof


/** returns the size of this type in bytes */
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____GfVec3i_sizeof();
#define pxr_GfVec3i_sizeof pxrInternal_v0_21__pxrReserved____GfVec3i_sizeof


/** returns the size of this type in bytes */
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____GfVec3i_alignof();
#define pxr_GfVec3i_alignof pxrInternal_v0_21__pxrReserved____GfVec3i_alignof


/** returns the size of this type in bytes */
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____GfVec4f_sizeof();
#define pxr_GfVec4f_sizeof pxrInternal_v0_21__pxrReserved____GfVec4f_sizeof


/** returns the size of this type in bytes */
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____GfVec4f_alignof();
#define pxr_GfVec4f_alignof pxrInternal_v0_21__pxrReserved____GfVec4f_alignof


/** returns the size of this type in bytes */
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____GfVec4h_sizeof();
#define pxr_GfVec4h_sizeof pxrInternal_v0_21__pxrReserved____GfVec4h_sizeof


/** returns the size of this type in bytes */
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____GfVec4h_alignof();
#define pxr_GfVec4h_alignof pxrInternal_v0_21__pxrReserved____GfVec4h_alignof


/** returns the size of this type in bytes */
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____GfVec4d_sizeof();
#define pxr_GfVec4d_sizeof pxrInternal_v0_21__pxrReserved____GfVec4d_sizeof


/** returns the size of this type in bytes */
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____GfVec4d_alignof();
#define pxr_GfVec4d_alignof pxrInternal_v0_21__pxrReserved____GfVec4d_alignof


/** returns the size of this type in bytes */
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____GfVec4i_sizeof();
#define pxr_GfVec4i_sizeof pxrInternal_v0_21__pxrReserved____GfVec4i_sizeof


/** returns the size of this type in bytes */
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____GfVec4i_alignof();
#define pxr_GfVec4i_alignof pxrInternal_v0_21__pxrReserved____GfVec4i_alignof


#ifdef __cplusplus
}
#endif