build/usd-sys/src/pxr/base/gf/gf_vec.rs

#![allow(non_snake_case)]
#![allow(non_camel_case_types)]
#![allow(non_upper_case_globals)]
#![allow(unused_imports)]
use crate::*;
pub use crate::cppmmabi::*;
use std::os::raw::*;


impl pxrInternal_v0_21__pxrReserved____GfVec2f_t {
    pub fn layout() -> std::alloc::Layout {
        unsafe {
            std::alloc::Layout::from_size_align(
                pxrInternal_v0_21__pxrReserved____GfVec2f_sizeof(),
                pxrInternal_v0_21__pxrReserved____GfVec2f_alignof(),
            ).unwrap()
        }
    }
}


impl pxrInternal_v0_21__pxrReserved____GfVec2h_t {
    pub fn layout() -> std::alloc::Layout {
        unsafe {
            std::alloc::Layout::from_size_align(
                pxrInternal_v0_21__pxrReserved____GfVec2h_sizeof(),
                pxrInternal_v0_21__pxrReserved____GfVec2h_alignof(),
            ).unwrap()
        }
    }
}


impl pxrInternal_v0_21__pxrReserved____GfVec2d_t {
    pub fn layout() -> std::alloc::Layout {
        unsafe {
            std::alloc::Layout::from_size_align(
                pxrInternal_v0_21__pxrReserved____GfVec2d_sizeof(),
                pxrInternal_v0_21__pxrReserved____GfVec2d_alignof(),
            ).unwrap()
        }
    }
}


impl pxrInternal_v0_21__pxrReserved____GfVec2i_t {
    pub fn layout() -> std::alloc::Layout {
        unsafe {
            std::alloc::Layout::from_size_align(
                pxrInternal_v0_21__pxrReserved____GfVec2i_sizeof(),
                pxrInternal_v0_21__pxrReserved____GfVec2i_alignof(),
            ).unwrap()
        }
    }
}


impl pxrInternal_v0_21__pxrReserved____GfVec3f_t {
    pub fn layout() -> std::alloc::Layout {
        unsafe {
            std::alloc::Layout::from_size_align(
                pxrInternal_v0_21__pxrReserved____GfVec3f_sizeof(),
                pxrInternal_v0_21__pxrReserved____GfVec3f_alignof(),
            ).unwrap()
        }
    }
}


impl pxrInternal_v0_21__pxrReserved____GfVec3h_t {
    pub fn layout() -> std::alloc::Layout {
        unsafe {
            std::alloc::Layout::from_size_align(
                pxrInternal_v0_21__pxrReserved____GfVec3h_sizeof(),
                pxrInternal_v0_21__pxrReserved____GfVec3h_alignof(),
            ).unwrap()
        }
    }
}


impl pxrInternal_v0_21__pxrReserved____GfVec3d_t {
    pub fn layout() -> std::alloc::Layout {
        unsafe {
            std::alloc::Layout::from_size_align(
                pxrInternal_v0_21__pxrReserved____GfVec3d_sizeof(),
                pxrInternal_v0_21__pxrReserved____GfVec3d_alignof(),
            ).unwrap()
        }
    }
}


impl pxrInternal_v0_21__pxrReserved____GfVec3i_t {
    pub fn layout() -> std::alloc::Layout {
        unsafe {
            std::alloc::Layout::from_size_align(
                pxrInternal_v0_21__pxrReserved____GfVec3i_sizeof(),
                pxrInternal_v0_21__pxrReserved____GfVec3i_alignof(),
            ).unwrap()
        }
    }
}


impl pxrInternal_v0_21__pxrReserved____GfVec4f_t {
    pub fn layout() -> std::alloc::Layout {
        unsafe {
            std::alloc::Layout::from_size_align(
                pxrInternal_v0_21__pxrReserved____GfVec4f_sizeof(),
                pxrInternal_v0_21__pxrReserved____GfVec4f_alignof(),
            ).unwrap()
        }
    }
}


impl pxrInternal_v0_21__pxrReserved____GfVec4h_t {
    pub fn layout() -> std::alloc::Layout {
        unsafe {
            std::alloc::Layout::from_size_align(
                pxrInternal_v0_21__pxrReserved____GfVec4h_sizeof(),
                pxrInternal_v0_21__pxrReserved____GfVec4h_alignof(),
            ).unwrap()
        }
    }
}


impl pxrInternal_v0_21__pxrReserved____GfVec4d_t {
    pub fn layout() -> std::alloc::Layout {
        unsafe {
            std::alloc::Layout::from_size_align(
                pxrInternal_v0_21__pxrReserved____GfVec4d_sizeof(),
                pxrInternal_v0_21__pxrReserved____GfVec4d_alignof(),
            ).unwrap()
        }
    }
}


impl pxrInternal_v0_21__pxrReserved____GfVec4i_t {
    pub fn layout() -> std::alloc::Layout {
        unsafe {
            std::alloc::Layout::from_size_align(
                pxrInternal_v0_21__pxrReserved____GfVec4i_sizeof(),
                pxrInternal_v0_21__pxrReserved____GfVec4i_alignof(),
            ).unwrap()
        }
    }
}



extern "C" {

pub fn pxrInternal_v0_21__pxrReserved____GfVec2f_sizeof() -> usize;

pub fn pxrInternal_v0_21__pxrReserved____GfVec2f_alignof() -> usize;

pub fn pxrInternal_v0_21__pxrReserved____GfVec2h_sizeof() -> usize;

pub fn pxrInternal_v0_21__pxrReserved____GfVec2h_alignof() -> usize;

pub fn pxrInternal_v0_21__pxrReserved____GfVec2d_sizeof() -> usize;

pub fn pxrInternal_v0_21__pxrReserved____GfVec2d_alignof() -> usize;

pub fn pxrInternal_v0_21__pxrReserved____GfVec2i_sizeof() -> usize;

pub fn pxrInternal_v0_21__pxrReserved____GfVec2i_alignof() -> usize;

pub fn pxrInternal_v0_21__pxrReserved____GfVec3f_sizeof() -> usize;

pub fn pxrInternal_v0_21__pxrReserved____GfVec3f_alignof() -> usize;

pub fn pxrInternal_v0_21__pxrReserved____GfVec3h_sizeof() -> usize;

pub fn pxrInternal_v0_21__pxrReserved____GfVec3h_alignof() -> usize;

pub fn pxrInternal_v0_21__pxrReserved____GfVec3d_sizeof() -> usize;

pub fn pxrInternal_v0_21__pxrReserved____GfVec3d_alignof() -> usize;

pub fn pxrInternal_v0_21__pxrReserved____GfVec3i_sizeof() -> usize;

pub fn pxrInternal_v0_21__pxrReserved____GfVec3i_alignof() -> usize;

pub fn pxrInternal_v0_21__pxrReserved____GfVec4f_sizeof() -> usize;

pub fn pxrInternal_v0_21__pxrReserved____GfVec4f_alignof() -> usize;

pub fn pxrInternal_v0_21__pxrReserved____GfVec4h_sizeof() -> usize;

pub fn pxrInternal_v0_21__pxrReserved____GfVec4h_alignof() -> usize;

pub fn pxrInternal_v0_21__pxrReserved____GfVec4d_sizeof() -> usize;

pub fn pxrInternal_v0_21__pxrReserved____GfVec4d_alignof() -> usize;

pub fn pxrInternal_v0_21__pxrReserved____GfVec4i_sizeof() -> usize;

pub fn pxrInternal_v0_21__pxrReserved____GfVec4i_alignof() -> usize;


} // extern "C"
